creting spinner (select)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">HealthRotine</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Histórico</string>
+    <string name="title_dashboard">Rotina</string>
+    <string name="title_notifications">Futuro</string>
+    <string-array name="type">
+        <item>Consulta</item>
+        <item>Exame</item>
+        <item>Remédio</item>
+    </string-array>
 </resources>
