adding delete update and find functions to table MedicalAppoitments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">HealthRotine</string>
-    <string name="title_home">Histórico</string>
-    <string name="title_dashboard">Rotina</string>
-    <string name="title_notifications">Futuro</string>
+    <string name="title_historic">Histórico</string>
+    <string name="title_rotine">Rotina</string>
+    <string name="title_future">Futuro</string>
     <string-array name="type">
         <item>Consulta</item>
         <item>Exame</item>
